# quadruped_learning

./: .gitmodules  README.md  canter.txt  env.py  left turn0.txt  motor.py  pace.txt  pybullet_vis.py  ref_motion_utils.py  requirements.txt  retarget_config_bittle_petoi.py  right turn0.txt  trot.txt  util.py
bittle/: bittle_petoi.urdf  bittle_simple.urdf
data_retargetted_motion/: canter.txt  left turn0.txt  pace.txt  retarget_config_bittle.py  retarget_motion.py  right turn0.txt  trot.txt  trot2.txt
motion_learning/: agent.py  behavioral_cloning.py  env.py  motor.py  plot_motion_retargeting.py  pybullet_vis.py  ref_motion_utils.py  robot.py  sim_config_bittle.py  tensorflow_env.py  util.py
motion_learning/bc_cache/: weights_0_b.npy  weights_0_w.npy  weights_1_b.npy  weights_1_w.npy  weights_2_b.npy  weights_2_w.npy
pi_firmware/: CMakeLists.txt  Dockerfile  README.md  arduino_eeprom.txt  docker-compose.yml  main.cpp  setup_pi.sh
pi_firmware/include/: bittle.hpp  bittle_config.hpp
pi_firmware/src/: bittle.cpp  bittle_config.cpp  main.cpp  set_angle.cpp
